Ensure password protection service can receive non http/s URLs

This fixes a wrong DCHECK where code does not expect deleted history
entries to be non-http/s.

BUG=709758

Review-Url: https://codereview.chromium.org/2811483002
Cr-Commit-Position: refs/heads/master@{#463157}

Former-commit-id: e2ed4b4539b7a50d8be892e4437897b18c181c91